# docs/swagger.json
@@ -1064,6 +1064,17 @@
                 }
             }
         },
+        "api.FeeEstimateRangeResponse": {
+            "type": "object",
+            "properties": {
+                "high": {
+                    "type": "string"
+                },
+                "low": {
+                    "type": "string"
+                }
+            }
+        },
         "api.IndexerMetrics": {
             "type": "object",
             "properties": {
@@ -1110,6 +1121,26 @@
                 }
             }
         },
+        "api.MarketPressureResponse": {
+            "type": "object",
+            "properties": {
+                "consecutive_full_blocks": {
+                    "type": "integer"
+                },
+                "next_block_fee_estimate": {
+                    "$ref": "#/definitions/api.FeeEstimateRangeResponse"
+                },
+                "percent_recent_blocks_at_max_blobs": {
+                    "type": "number"
+                },
+                "predicted_direction": {
+                    "type": "string"
+                },
+                "recent_blocks_above_target": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.PricingResponse": {
             "type": "object",
             "properties": {
@@ -1127,6 +1158,9 @@
                 },
                 "fork_stage": {
                     "type": "string"
+                },
+                "market_pressure": {
+                    "$ref": "#/definitions/api.MarketPressureResponse"
                 },
                 "network_id": {
                     "type": "integer"
